# runpod-toolkit

./: pyproject.toml
configs/models/: devstral-small-2505.yaml  minimax-m25.yaml  qwen25-coder-32b.yaml  qwen3-coder-30b.yaml  qwen3-coder-next.yaml  reap-139b.yaml  reap-172b.yaml
docker/: Dockerfile.enforce-eager  Dockerfile.local-model  Dockerfile.model  Dockerfile.vllm  entrypoint-vllm.sh
runpod_toolkit/: __init__.py  config.py
runpod_toolkit/cli/: __init__.py  _common.py  config.py  main.py  pod.py  s3.py  serve.py  volume.py
runpod_toolkit/compute/: __init__.py  pod_manager.py  runpod_client.py  ssh.py  volume_copier.py
runpod_toolkit/gpu/: __init__.py  specs.py
runpod_toolkit/serve/: __init__.py  health.py  model_registry.py  vllm_pod.py
runpod_toolkit/storage/: __init__.py  b2_client.py  runpod_s3_client.py
scripts/: bake_all_eval_models.sh  bake_model_image.py  cloud.py  serve-local.sh
